# summarize-ranges

./: .gitignore  Makefile  README.md  pyproject.toml
src/summarize_ranges/: cli.py  ranges.py
test/: test_summarizer.py
